# MSL

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  clang-format.sh  test_build.sh  test_run.sh
.github/workflows/: ci.yml
cmake/: MSLConfig.cmake.in
docs/: COMPATIBILITY.md  LEGACY_API_MAP.md  MIGRATION_v3.md  MIGRATION_v4.md  RELEASE_VALIDATION.md
examples/: CMakeLists.txt  file_ptr_io.cpp  safe_cast.cpp  shared_pool.cpp  string_split.cpp
include/msl/: assert.h  bench.h  cast.h  check_assert.h  config.h  file_ptr.h  inherit_cast.h  legacy.h  macro.h  msl.h  pool.h  ptr.h  random.h  range.h  scoped_shared_ptr.h  traits.h  truncate_cast.h  util.h  utils.h
legacy/: README.md
legacy/vs/: msl_tests.sln
legacy/vs/msl/: main.cpp  msl.vcxproj  msl.vcxproj.filters  test_mixed_msl.cpp  test_scoped_shared_ptr.cpp
msl/: main.cpp  msl.vcxproj  msl.vcxproj.filters  msl_tests.cpp  stdafx.h  test.cpp  test_mixed_msl.cpp  test_pool.cpp  test_scoped_shared_ptr.cpp  test_tabs.txt
msl/include/msl/: file_ptr.h  inherit_cast.h  msl.h  truncate_cast.h
tests/: CMakeLists.txt  test_bench.cpp  test_cast.cpp  test_common.h  test_feature_gates.cpp  test_file_ptr.cpp  test_legacy.cpp  test_main.cpp  test_pool.cpp  test_ptr.cpp  test_random.cpp  test_range.cpp  test_traits.cpp  test_utils.cpp  toolchain_info.cpp
tests/headers/: assert.cpp  bench.cpp  cast.cpp  config.cpp  file_ptr.cpp  legacy.cpp  macro.cpp  msl.cpp  no_exceptions.cpp  pool.cpp  ptr.cpp  random.cpp  range.cpp  traits.cpp  util.cpp  utils.cpp
